# config/routes.rb
@@ -5,4 +5,5 @@ Rails.application.routes.draw do
   get '/article_url', to: 'articles#find_by_url'
   resources :articles, except: %i[new edit]
   resources :tags, except: %i[new edit show]
+  resources :article_tags, only: %i[index create destroy]
 end
